render tsbleview in home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,4 +20,10 @@
       </li>
     </ul>
   </section>
+    <front-end-internship-assignment-table-view
+    [searchbooksList]="allBooks"
+    [subjectName]="searchValue"
+    [tableType]="'search'"
+    ></front-end-internship-assignment-table-view>
+  
 </div>
