--- a/src/app/components/trending-subjects/trending-subjects.component.html
+++ b/src/app/components/trending-subjects/trending-subjects.component.html
@@ -2,5 +2,6 @@
   <front-end-internship-assignment-table-view
   [booksList]="allBooks"
   [subjectName]="subjectName"
+  [tableType]="'subject'"
   ></front-end-internship-assignment-table-view>
 </div>
