--- a/src/app/shared/table-view/table-view.component.html
+++ b/src/app/shared/table-view/table-view.component.html
@@ -1,5 +1,5 @@
 <div class="tw-m-24-px">
-  <div class="tw-mb-24-px tw-text-24-px"> Top {{ booksList.length }} book{{ booksList.length > 1 ? "s" : "" }} on {{ subjectName }}</div>
+  <div class="tw-mb-24-px tw-text-24-px"> Top {{ booksList.length? booksList.length : searchbooksList.length }} book{{ booksList.length > 1 || searchbooksList.length > 1 ? "s" : "" }} on {{ subjectName }}</div>
 
   <ng-container>
     <table class="table-view">
@@ -11,15 +11,35 @@
         </tr>
       </thead>
       <tbody class="table-body">
-        <tr *ngFor="let book of booksList" class="row-data">
+
+        <ng-container *ngIf="tableType === 'subject' ">
+        <tr *ngFor="let book of booksList" class="row-data" >
           <td>
             <a class="tw-no-underline" href="https://openlibrary.org{{ book.key }}" target="_blank">{{ book.title }}</a>
           </td>
-          <td>
-            {{ book.authors.length > 0 ? book.authors[0].name : "Unknown" }}
+          <td> 
+            {{  
+               book.authors.length > 0 ? book.authors[0].name : "Unknown"
+             }}
           </td>
           <td>{{ book.first_publish_year }}</td>
         </tr>
+      </ng-container>
+
+      <ng-container *ngIf="tableType === 'search' ">
+        <tr *ngFor="let searchBook of searchbooksList" class="row-data" >
+          <td>
+            <a class="tw-no-underline" href="https://openlibrary.org{{ searchBook.key }}" target="_blank">{{ searchBook.title }}</a>
+          </td>
+          <td> 
+             {{
+                   searchBook.author_name.length > 0 ? searchBook.author_name[0] : "Unknown"
+             }}
+          </td>
+          <td>{{ searchBook.first_publish_year }}</td>
+        </tr>
+      </ng-container>
+
       </tbody>
     </table>
   </ng-container>
