--- a/src/app/components/trending-subjects/trending-subjects.component.html
+++ b/src/app/components/trending-subjects/trending-subjects.component.html
@@ -1,5 +1,11 @@
-<div *ngIf="allBooks.length > 0">
-  <front-end-internship-assignment-table-view
+<div>
+  <a class="tw-m-24-px tw-text-16-px tw-flex tw-items-center" routerLink="/">
+    <mat-icon  aria-label="Back arrow Icon">arrow_back</mat-icon> Back
+  </a>
+  <svg class="spinner" viewBox="0 0 50 50" *ngIf="isLoading">
+    <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+  </svg>
+  <front-end-internship-assignment-table-view  *ngIf="allBooks.length > 0 && !isLoading"
   [booksList]="allBooks"
   [subjectName]="subjectName"
   [tableType]="'subject'"
